src/styles/global.scss
@import './variables.scss';
@import '~ol/ol.css';
@import './openlayer';
@import './vuetify-extend';
@import './utils';

html,
body {
  font-size: 16px;
  line-height: 1;
  color: $font-color;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: auto;
  font-family: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;

  touch-action: manipulation;
}

html {
  overflow-y: auto;
}

* {
  line-height: 1;
  box-sizing: border-box;
}


*:focus {
  outline:none
}

.required:after {
  content: '*';
  color: #A22A29;
  font-size: 13px;
  position: absolute;
}

